--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
        <section class="section-2">
         <div class="section-2-button">
         <div class="section-2-button-moveent">
-        <button>Upcoming Match</button>
+        <button> <a href="Up-Coming-Match.html">UpComing</a></button>
         <button>All Group</button>
         <button class="button-class-2">Blog</button>
     </div>
