--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 
        <section class="section-2">
         <div class="section-2-button">
-        <div class="section-2-button-moveent">
-        <button> <a href="Up-Coming-Match.html">UpComing</a></button>
-        <button>All Group</button>
-        <button class="button-class-2">Blog</button>
-    </div>
-        </div>
+            <div class="section-2-button-moveent">
+                    <button ><a href="Up-Coming-Match.html">Upcoming</a> </button>
+                    <button>All Group</button>
+                    <button class="button-class-2">Blog</button>
+                </div>
+                </div>
         </div>
     
     <div class="section-2-content">
@@ -170,11 +170,16 @@
                             23
                         </div>
                 </div>
+
+                <div class="container">
+                    <div class="vertical-center">
+                      <button class="container-back-colour"><h3>View All</h3></button>
+                    </div>
           
        </section>
       <footer>
         <header>
-            <div class="footer-contect">
+            <div class="footer-content">
                 <h3>Goal</h3>
                 <hr color="FFFFFF">
                 <nav>
