--- a/Up-Coming-Match.html
+++ b/Up-Coming-Match.html
@@ -123,34 +123,38 @@ Section 2 Start
                 <h4>Germany VS France</h4>
                 <p>April 01, 2023, 1.00 AM</p>
             </div>
+        </div> 
         </div>
-        
-        
-        </div>
+
+        <div class="container">
+            <div class="vertical-center">
+              <button class="container-back-colour"><h3>View All</h3></button>
+            </div>
+
     </section>
 <!-- ---------
 Footer Section
 ----------->
-    <footer>
-        <header>
-            <div class="footer-contect">
-                <h3>Goal</h3>
-                <hr color="FFFFFF">
-                <nav>
-                    <div class="nav-link">
-                        <ul>
-                            <li><a href="">Contact Us</a> </a></li>
-                            <li><a href="">Terms of Service</a></li>
-                            <li><a href="">Privacy Policy</a></li>
-                            <li><a href="">Privacy Settings</a></li>
-                            <li><a href="">Goal app</a></li>
-                            <li><a href="">Goal Live</a></li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </header>
-      </footer>
+<footer>
+    <header>
+        <div class="footer-content">
+            <h3>Goal</h3>
+            <hr color="FFFFFF">
+            <nav>
+                <div class="nav-link">
+                    <ul>
+                        <li><a href="">Contact Us</a> </a></li>
+                        <li><a href="">Terms of Service</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Privacy Settings</a></li>
+                        <li><a href="">Goal app</a></li>
+                        <li><a href="">Goal Live</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+  </footer>
 <!--------- 
  Footer End
 -------- -->
